--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "perfomance-monitoring-system",
+  "author": {
+    "name": "Strongest Algorithm",
+    "email": "centmarde.campado@gmail.com"
+  },
   "private": true,
   "type": "module",
   "version": "0.0.0",
@@ -16,6 +20,7 @@
     "core-js": "^3.37.1",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuetify": "^3.6.14"
   },
   "devDependencies": {
