--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "@mdi/font": "7.4.47",
+    "@mdi/font": "^7.4.47",
     "@supabase/supabase-js": "^2.48.1",
     "core-js": "^3.37.1",
     "datatables.net-dt": "^2.2.2",
