--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-echarts": "^7.0.3",
     "vue-sidebar-menu": "^5.2.2",
     "vue-toastification": "^2.0.0-rc.5",
+    "vue3-perfect-scrollbar": "^2.0.0",
     "vuetify": "^3.7.9"
   },
   "devDependencies": {
