--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "datatables.net-dt": "^2.2.2",
     "datatables.net-vue3": "^3.0.4",
     "echarts": "^5.6.0",
+    "groq-sdk": "^0.15.0",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vue-echarts": "^7.0.3",
