--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules
 /dist
 
 # local env files
+.env
 .env.local
 .env.*.local
 
@@ -21,6 +22,7 @@ pnpm-debug.log*
 *.sln
 *.sw?
 .env
+
 
 .vercel
 src/components.d.ts
