--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@supabase/supabase-js": "^2.48.1",
+    "axios": "^1.9.0",
     "core-js": "^3.37.1",
     "datatables.net-dt": "^2.2.2",
     "datatables.net-vue3": "^3.0.4",
